--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "url": "logbook"
   },
   "license": "ISC",
-  "author": "Yash",
+  "author": "Yash, Nishita",
   "type": "commonjs",
   "main": "server.js",
   "scripts": {
@@ -18,6 +18,7 @@
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cookies": "^0.9.1",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
