--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
+    "js-cookie": "^3.0.5",
     "js-cookies": "^1.0.4",
     "lucide-react": "^0.544.0",
+    "next-auth": "^4.24.11",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router": "^7.8.1",
+    "react-router-dom": "^7.9.1",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
